# Simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  combined_output.txt  diagramm.drawio
src/: main.cpp  main.cu  startSimulation.cpp
src/.include/: colour.h  particel.hpp  simulation.hpp  vector3.h  window.hpp
src/cuda/: grid.cu  grid.cuh  info.txt  params.cu  params.cuh  particles.cu  simulation.cu  simulation.cuh  util.cuh
src/gui/: frame.cpp  frame.hpp  window.c  window.cpp
src/gui/cuda/: grid.cu  info.txt
src/gui/shaders/: circle.frag  circle.vert
src/include/cuda/: grid.cuh  params.cuh  particles.cuh  simulation.cuh  util.cuh
src/include/gui/: frame.hpp
src/include/gui/cuda/: CUDA_Simulation.cuh  grid.cuh  info.txt  params.cuh  particles.cuh  temp.py  util.cuh
src/include/simulation/: draw.hpp  particle.hpp  simulation.hpp
src/include/util/: colour.h  inputTypes.hpp  log.hpp  random.hpp  types.h  vector2.hpp  vector3.hpp
src/simulation/: draw.cpp  grid.cu  grid.cuh  info.txt  params.cu  params.cuh  particel.cpp  particles.cu  particles.cuh  simulation.cpp  simulation.cu  simulation.cuh  temp.py  util.cu  util.cuh
src/types/: simulationTypes.h
src/util/: random.cpp  random.hpp  types.h  vector2.cpp  vector2.hpp  vector3.cpp
